fix alignment header input

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ nav a {
     box-sizing: border-box;
 }
 
+#search-form {
+    display: flex;
+    align-items: center;
+}
+
 .submit-btn {
     height: 40px;
     width: 80px;
